<resources>
    <string name="app_name">江理教师助手</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_close">close</string>
    <string name="draweropen">open</string>
    <string-array name="tab_array">
        <item>个人中心</item>
        <item>监考安排</item>
        <item>注销登录</item>
    </string-array>
    <string name="login">登录</string>
    <string name="title">教师助手</string>
    <string name="user">用户名 :</string>
    <string name="password">密 码 :</string>
    <string name="test_name">课程表</string>
    <string name="mon">星期一</string>
    <string name="tue">星期二</string>
    <string name="wen">星期三</string>
    <string name="thu">星期四</string>
    <string name="fri">星期五</string>
    <string name="sta">星期六</string>
    <string name="sun">星期日</string>
    <string name="course_detail">课程详情</string>
    <string name="lg_news">理工新闻</string>
    <string name="xy_news">校园传真</string>
    <string name="mt_news">媒体聚焦</string>
    <string name="xs_news">学术报告</string>
    <string name="news_title">校园资讯</string>
    <string name="loda_text">正在拼命加载。。。</string>
    <string name="weather">天气</string>
    <string name="weather_tag_title">温馨提示</string>
    <string name="weather_search">天气查询</string>
    <string name="weather_setting">天气设置 </string>
    <string name="search">查询</string>
    <string name="setting">设置</string>
    <string name="person_info">我的资料</string>
    <string name="test_array">监考安排</string>
</resources>
