<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_kc"
        android:gravity="center">
        <TextView
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/news_title"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_lg"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:gravity="center"
                android:text="@string/lg_news"
                android:textColor="@color/title_kc1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lg_line"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/title_kc"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_xy"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:gravity="center"
                android:text="@string/xy_news"
                android:textColor="@color/title_kc1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/xy_line"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/title_kc"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_mt"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:gravity="center"
                android:text="@string/mt_news"
                android:textColor="@color/title_kc1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mt_line"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/title_kc"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_xs"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:gravity="center"
                android:text="@string/xs_news"
                android:textColor="@color/title_kc1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/xs_line"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/title_kc"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="0dp"
        android:background="@color/title_kc" />

    <android.support.v4.view.ViewPager
        android:id="@+id/news_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>